--- a/index.html
+++ b/index.html
@@ -1,20 +1,35 @@
-<h1>BMI Calculator</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>BMI Calculator</title>
+  <link rel="stylesheet" href="css/style.css" />
+</head>
+<body>
+  <div class="container">
+    <h1>BMI Calculator</h1>
 
-<div class="units">
-  <label><input type="radio" name="unit" value="metric" checked /> Metric (kg/cm)</label>
-  <label><input type="radio" name="unit" value="imperial" /> Imperial (lbs/in)</label>
-</div>
+    <div class="units">
+      <label><input type="radio" name="unit" value="metric" checked /> Metric (kg/cm)</label>
+      <label><input type="radio" name="unit" value="imperial" /> Imperial (lbs/in)</label>
+    </div>
 
-<label for="weight">Weight:</label>
-<input type="number" id="weight" placeholder="Enter weight" />
+    <label for="weight">Weight:</label>
+    <input type="number" id="weight" placeholder="Enter weight" />
 
-<label for="height">Height:</label>
-<input type="number" id="height" placeholder="Enter height" />
+    <label for="height">Height:</label>
+    <input type="number" id="height" placeholder="Enter height" />
 
-<button onclick="calculateBMI()">Calculate BMI</button>
+    <button onclick="calculateBMI()">Calculate BMI</button>
 
-<div class="result" id="bmiResult"></div>
+    <div class="result" id="bmiResult"></div>
 
-<div class="img-container">
-  <img src="images/bmi-icon.png" alt="BMI icon" />
-</div>
+    <div class="img-container">
+      <img src="images/bmi-icon.png" alt="BMI icon" />
+    </div>
+  </div>
+
+  <script src="js/script.js"></script>
+</body>
+</html>
